--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,10 +6,10 @@
 		"dockerfile": "Dockerfile"
 	},
 	// Add the IDs of extensions you want installed when the container is created
-	"workspaceMount": "source=${localWorkspaceFolder},target=/workspaces/nemo,type=bind",
+	"workspaceMount": "source=${localWorkspaceFolder},target=${localWorkspaceFolder},type=bind",
 	/* the path of workspace folder to be opened after container is running
 	 */
-	"workspaceFolder": "/workspaces/nemo",
+	"workspaceFolder": "${localWorkspaceFolder}",
 	"mounts": [
 		"source=extensionCache,target=/root/.vscode-server/extensions,type=volume"
 	],
