--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,4 @@
-idf_component_register(SRCS "mqtt.c" "pdet.c" "pcnt.c" "meteo.c" "sntp.c" "wifi.c" "main.c"
-                    INCLUDE_DIRS "." "include")
+idf_component_register(SRCS "ota.c" "mqtt.c" "pdet.c" "pcnt.c" "meteo.c" "sntp.c" "wifi.c" "main.c" ""
+                    INCLUDE_DIRS "." "include"
+                    EMBED_TXTFILES ../certificate/github.cer
+                    EMBED_TXTFILES ../certificate/hash)
