--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
             run: |
                   echo "${{ secrets.SDKCONFIG }}" > sdkconfig
                   git clone https://github.com/UncleRus/esp-idf-lib $IDF_PATH/esp-idf-lib
+                  chmod +x $IDF_PATH/export.sh
                   $IDF_PATH/export.sh
                   idf.py fullclean
                   idf.py reconfigure
