--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,9 @@ jobs:
                   git clone https://github.com/UncleRus/esp-idf-lib $IDF_PATH/esp-idf-lib
                   chmod +x $IDF_PATH/export.sh
                   $IDF_PATH/export.sh
-                  idf.py fullclean
-                  idf.py reconfigure
-                  idf.py build
+                  $IDF_PATH/tools/idf.py fullclean
+                  $IDF_PATH/tools/idf.py reconfigure
+                  $IDF_PATH/tools/idf.py build
                   
           - name: Delete latest release
             uses: actions/github-script@v4
